--- a/mainstyle.css
+++ b/mainstyle.css
@@ -25,8 +25,12 @@ html, body {
     padding: 0;
 }
 
-.fixed-action-btn{
+.fixed-action-btn {
     left: 20px;
+}
+
+.fixed-action-btn-right {
+    right: 24px;
 }
 
 #statistics {
@@ -52,4 +56,19 @@ html, body {
     font-weight: bold;
     font-size: 20px;
     text-align: center;
+}
+
+/* label focus color */
+.input-field input:focus + label {
+    color: rgb(220,220,220) !important;
+}
+               
+.material-icons.active {
+    color: rgb(220,220,220) !important;
+}
+
+/* label underline focus color */
+.row .input-field input:focus {
+    border-bottom: 1px solid rgb(220,220,220) !important;
+    box-shadow: 0 1px 0 0 rgb(220,220,220) !important
 }
